fixed header
header was out of place

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -27,3 +27,9 @@ padding:20px;
 font-size:110%;
 
 }
+
+h1
+{text-align:center;
+
+
+}
